--- a/app/scss/_reset.scss
+++ b/app/scss/_reset.scss
@@ -3,6 +3,7 @@
   padding: 0px;
   margin: 0px;
   border: 0px;
+  -webkit-tap-highlight-color: transparent;
 }
 
 *,
@@ -130,13 +131,11 @@ input[type="search"] {
     outline: none;
   }
 }
-* {
-  -webkit-tap-highlight-color: transparent;
-}
-a, article, div, h1, h2, h3, h4, h5, h6, img, section, span {
-  -moz-user-select: none;
-  -webkit-user-select: none;
-}
+
+// a, article, div, h1, h2, h3, h4, h5, h6, img, section, span {
+//   -moz-user-select: none;
+//   -webkit-user-select: none;
+// }
 
 input,
 button,
