Удалил лишнее, настроил папки

--- a/app/scss/_base.scss
+++ b/app/scss/_base.scss
@@ -4,7 +4,7 @@
 $fontFamily: "Arial", sans-serif;
 
 //? ====== Контейнер ======================
-$maxWidth: 1920;
+$maxWidth: 1920; // Не меняем.
 $maxWidthContainer: 1200;
 $md1: $maxWidthContainer + 10;
 $md2: 767.98;
