--- a/app/scss/interface/_header.scss
+++ b/app/scss/interface/_header.scss
@@ -4,6 +4,40 @@
 	left: 0;
 	width: 100%;
 	background: #fff;
+	z-index: 999;
+	.menu {
+		&-list {
+			display: flex;
+			justify-content: flex-start;
+			align-items: center;
+			flex-wrap: wrap;
+		}
+		&-item {
+			margin-right: 50px;
+			font-weight: 600;
+			font-size: 12px;
+			line-height: 15px;
+			position: relative;
+			&::after {
+				content: '';
+				display: block;
+				width: 100%;
+				height: 1px;
+				opacity: 0;
+				background: #000;
+				transform: translateY(3px);
+				transition: all 0.5s ease;
+			}
+			&:last-child {
+				margin-right: 0;
+			}
+			&:hover {
+				&::after {
+					opacity: 1;
+				}
+			}
+		}
+	}
 }
 .header-top {
 	padding: 10px 0;
@@ -80,39 +114,7 @@
 		}
 	}
 }
-.menu {
-	&-list {
-		display: flex;
-		justify-content: flex-start;
-		align-items: center;
-		flex-wrap: wrap;
-	}
-	&-item {
-		margin-right: 50px;
-		font-weight: 600;
-		font-size: 12px;
-		line-height: 15px;
-		position: relative;
-		&::after {
-			content: '';
-			display: block;
-			width: 100%;
-			height: 1px;
-			opacity: 0;
-			background: #000;
-			transform: translateY(3px);
-			transition: all 0.5s ease;
-		}
-		&:last-child {
-			margin-right: 0;
-		}
-		&:hover {
-			&::after {
-				opacity: 1;
-			}
-		}
-	}
-}
+
 .menu-mobile {
 	display: none;
 }
