--- a/app/scss/_site.scss
+++ b/app/scss/_site.scss
@@ -15,6 +15,13 @@
 	}
 	&__content {
 		flex: 1 1 100%;
+		padding-top: 128px;
+		@media (max-width: ($md1+px)) {
+			padding-top: 71px;
+		}
+		@media (max-width: ($md2+px)) {
+			padding-top: 91px;
+		}
 	}
 }
 .hidden,
@@ -24,4 +31,8 @@
 .lock {
 	overflow: hidden;
 	-webkit-overflow-scrolling: touch;
+}
+
+.box-shadow {
+	box-shadow: 0px 15px 15px rgba(0, 0, 0, 0.15);
 }
