--- a/app/scss/modules/faq.scss
+++ b/app/scss/modules/faq.scss
@@ -121,7 +121,7 @@
 		}
 		&__btn {
 			padding: 25px;
-			background: #fcfcfc;
+			background: #e6e6e6;
 			border-radius: 15px;
 			img {
 				opacity: 0.75;
