--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -22,6 +22,7 @@
 
 @import 'modules/main_screen'; // Главный экран
 @import 'modules/cards'; // Карточки
+@import 'modules/portfolio-min';
 @import 'modules/marketplace'; // магазины
 @import 'modules/free-analysis';
 @import 'modules/info-block';
