--- a/app/scss/modules/main_screen.scss
+++ b/app/scss/modules/main_screen.scss
@@ -52,6 +52,7 @@
 		&__content {
 			padding: 60px 0 10px;
 			max-width: 630px;
+			width: 100%;
 			display: flex;
 			flex-direction: column;
 			justify-content: center;
@@ -70,7 +71,7 @@
 		}
 
 		&__subtitle {
-			max-width: 326px;
+			max-width: 380px;
 			margin-bottom: 34px;
 			font-size: 16px;
 			line-height: 20px;
@@ -85,9 +86,9 @@
 	.main-screen {
 		&__content {
 			h1 {
-				font-size: 30px;
+				font-size: 40px;
 				span {
-					font-size: 35px;
+					font-size: 70px;
 				}
 			}
 		}
@@ -97,6 +98,18 @@
 			text-align: center;
 			img {
 				width: 60%;
+			}
+		}
+	}
+}
+@media (max-width: 420px) {
+	.main-screen {
+		&__content {
+			h1 {
+				font-size: 30px;
+				span {
+					font-size: 40px;
+				}
 			}
 		}
 	}
