--- a/app/scss/modules/prices.scss
+++ b/app/scss/modules/prices.scss
@@ -41,7 +41,6 @@
 
 	&__item {
 		position: relative;
-		// max-width: 360px;
 		width: 100%;
 		overflow: hidden;
 		border-radius: 15px;
@@ -50,7 +49,7 @@
 		display: flex;
 		flex-direction: column;
 		justify-content: stretch;
-		padding: 40px 33px 30px;
+		padding: 40px 20px 30px 33px;
 		margin-right: 60px;
 		&:last-child {
 			margin-right: 0;
@@ -192,7 +191,7 @@
 		}
 
 		&__item {
-			max-width: 360px;
+			max-width: 480px;
 			min-height: 600px;
 			display: none;
 			margin-right: 0;
