--- a/app/scss/_reset.scss
+++ b/app/scss/_reset.scss
@@ -36,12 +36,12 @@ section {
 	display: block;
 }
 
-html,
-body {
-	height: 100%;
-	overflow: auto;
-	overflow-x: hidden;
-}
+// html,
+// body {
+// 	height: 100%;
+// 	overflow: auto;
+// 	overflow-x: hidden;
+// }
 
 body {
 	line-height: 1;
