--- a/app/scss/interface/_button.scss
+++ b/app/scss/interface/_button.scss
@@ -4,6 +4,7 @@
 	align-items: center;
 	text-align: center;
 	padding: 15px 30px;
+	color: #000;
 	background: #d3b404 linear-gradient(180deg, #d3b404 -23.08%, #faec37 54.27%, #d0af00 126.92%);
 	border-radius: 15px;
 	font-weight: 500;
