--- a/app/scss/interface/_header.scss
+++ b/app/scss/interface/_header.scss
@@ -5,6 +5,9 @@
 	width: 100%;
 	background: #fff;
 	z-index: 999;
+	&.active {
+		box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
+	}
 	.menu {
 		&-list {
 			display: flex;
@@ -42,7 +45,7 @@
 .header-top {
 	padding: 10px 0;
 	border-bottom: 1px solid rgba(#000000, 0.2);
-	box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
+	// box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
 	&__wrapper {
 		display: flex;
 		justify-content: space-between;
@@ -97,7 +100,7 @@
 .header-bottom {
 	padding: 20px 0;
 	border-bottom: 1px solid rgba(#000000, 0.2);
-	box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
+	// box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
 	&__wrapper {
 		display: flex;
 		justify-content: flex-start;
