--- a/app/scss/modules/algorithm.scss
+++ b/app/scss/modules/algorithm.scss
@@ -134,3 +134,38 @@
 		}
 	}
 }
+
+@media (max-width: 479px) {
+	.algorithm {
+		padding-bottom: 60px;
+		&__card {
+			padding: 30px 11px 24px 10px;
+		}
+
+		&__content {
+			padding: 0px;
+		}
+
+		&__list {
+			li {
+				margin-bottom: 20px;
+				font-size: 16px;
+				padding-left: 60px;
+				&:last-child {
+					margin-bottom: 0;
+				}
+			}
+		}
+
+		&__images {
+			padding: 0;
+			img {
+				display: none;
+			}
+		}
+
+		&__title {
+			font-size: 28px;
+		}
+	}
+}
