--- a/app/scss/modules/faq.scss
+++ b/app/scss/modules/faq.scss
@@ -179,3 +179,15 @@
 		}
 	}
 }
+
+@media (max-width: 479px) {
+	.faq {
+		&__content {
+			padding: 25px 10px;
+		}
+		&__name {
+			font-size: 16px;
+			line-height: 20px;
+		}
+	}
+}
