--- a/app/scss/modules/prices.scss
+++ b/app/scss/modules/prices.scss
@@ -62,6 +62,7 @@
 			position: absolute;
 			left: -214px;
 			bottom: 199px;
+			opacity: 0.75;
 			transform: rotate(-90deg);
 			background: url('../img/text/blackbox_white.svg') center center / contain no-repeat;
 		}
@@ -167,6 +168,7 @@
 		position: absolute;
 		bottom: -10px;
 		right: -10px;
+		opacity: 0.75;
 		img {
 			width: 145px;
 			height: 145px;
@@ -241,7 +243,7 @@
 		}
 	}
 }
-@media (max-width: 400px) {
+@media (max-width: 479px) {
 	.prices {
 		&__head {
 			justify-content: flex-start;
@@ -254,7 +256,7 @@
 			}
 		}
 		&__item {
-			padding: 40px 10px;
+			padding: 20px 10px;
 		}
 		&__name {
 			font-size: 40px;
@@ -264,6 +266,10 @@
 				font-size: 14px;
 				line-height: 1.2;
 			}
+		}
+		&__price {
+			margin-top: 30px;
+			font-size: 40px;
 		}
 	}
 }
