--- a/app/template/system/footer.html
+++ b/app/template/system/footer.html
@@ -85,8 +85,7 @@
                         <span>г. Уфа, ул. Ленина 70</span>
                     </a>
                     <div class="footer-bottom__card">
-                        <img src="assets/img/icons/visa.png" alt="">
-                        <img src="assets/img/icons/mastercart.png" alt="">
+                        <img src="assets/img/icons/mir.png" alt="">
                     </div>
                 </div>
                 <!-- /.footer-bottom__contacts -->
@@ -100,7 +99,7 @@
                         <li class="menu-item"><a href="#">Дизайн</a></li>
                         <li class="menu-item"><a href="#">Услуги</a></li>
                         <li class="menu-item"><a href="#">Контакты</a></li>
-                        <li class="menu-item"><a href="#">Аналитика</a></li>
+                        <li class="menu-item"><a href="#">Под ключ</a></li>
                         <li class="menu-item"><a href="#">Компания</a></li>
                         <li class="menu-item"><a href="#">Ссылки</a></li>
                         <li class="menu-item"><a href="#">Под ключ</a></li>
@@ -113,9 +112,6 @@
                 </div>
                 <!-- /.footer-bottom__card -->
                 <div class="footer-bottom__documents">
-                    <a href="#">Политика конфиденциальности</a>
-                    <a href="#">Политика конфиденциальности</a>
-                    <a href="#">Политика конфиденциальности</a>
                     <a href="#">Политика конфиденциальности</a>
                     <a href="#">Политика конфиденциальности</a>
                 </div>
@@ -145,3 +141,6 @@
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
 <script src="assets/js/main.min.js"></script>
+</body>
+
+</html>
