--- a/app/template/system/header.html
+++ b/app/template/system/header.html
@@ -32,17 +32,17 @@
             <div class="header-bottom__wrapper">
                 <nav class="header-bottom__menu menu">
                     <ul class="menu-list">
-                        <li class="menu-item"><a href="#">SEO</a></li>
-                        <li class="menu-item"><a href="#">Дизайн</a></li>
-                        <li class="menu-item"><a href="#">Аналитика</a></li>
+                        <li class="menu-item"><a href="seo.html">SEO</a></li>
+                        <li class="menu-item"><a href="design.html">Дизайн</a></li>
+                        <li class="menu-item"><a href="turnkey.html">Под ключ</a></li>
                         <li class="menu-item"><a href="#">Обучение</a></li>
-                        <li class="menu-item"><a href="#">Главная</a></li>
+                        <li class="menu-item"><a href="index.html">Главная</a></li>
                     </ul>
                 </nav>
                 <!-- /.header-bottom__menu -->
                 <nav class="header-bottom__menu menu">
                     <ul class="menu-list">
-                        <li class="menu-item"><a href="#">Услуги</a></li>
+                        <li class="menu-item"><a href="ads.html">Услуги</a></li>
                         <li class="menu-item"><a href="#">Кейсы</a></li>
                         <li class="menu-item"><a href="#">Компания</a></li>
                         <li class="menu-item"><a href="#">Статьи</a></li>
@@ -60,12 +60,12 @@
         <div class="container">
             <div class="menu-mobile__list menu">
                 <ul class="menu-list">
-                    <li class="menu-item"><a href="#">Главная</a></li>
-                    <li class="menu-item"><a href="#">SEO</a></li>
-                    <li class="menu-item"><a href="#">Дизайн</a></li>
-                    <li class="menu-item"><a href="#">Аналитика</a></li>
+                    <li class="menu-item"><a href="index.html">Главная</a></li>
+                    <li class="menu-item"><a href="seo.html">SEO</a></li>
+                    <li class="menu-item"><a href="design.html">Дизайн</a></li>
+                    <li class="menu-item"><a href="turnkey.html">Под ключ</a></li>
                     <li class="menu-item"><a href="#">Обучение</a></li>
-                    <li class="menu-item"><a href="#">Услуги</a></li>
+                    <li class="menu-item"><a href="ads.html">Услуги</a></li>
                     <li class="menu-item"><a href="#">Кейсы</a></li>
                     <li class="menu-item"><a href="#">Компания</a></li>
                     <li class="menu-item"><a href="#">Статьи</a></li>
